# over-engineered-todos

./: BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel
services/todoservice/: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  main.go
