load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_library(
    name = "todoservice_lib",
    srcs = ["main.go"],
    importpath = "github.com/LeanSolutions/over-engineered-todos/services/todoservice",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin-gonic_gin//:gin"],
)

go_binary(
    name = "todoservice",
    embed = [":todoservice_lib"],
    importpath = "github.com/LeanSolutions/over-engineered-todos/services/todoservice",
    visibility = ["//visibility:public"],
)

go_image(
    name = "todoservice_image",
    binary = ":todoservice",
    base = "@go_base_image//image",
)


